# cpp_parsing_and_generation

./: README.md  install_boost.bat
docs/: BoostSpiritAPI.docx  ~$ostSpiritAPI.docx
install/: README.md
src/examples/: BoostSpiritAPI.docx  CMakeLists.txt  NOTES.md  NOTES_on_bind.md  NOTES_on_mem_fn.md  Notes.md  README.md  example.hpp  spirit_lex_word_count1.cpp  word_count.input
